# openneuro-py

./: .git-blame-ignore-revs  .gitignore  .lefthook.yml  .pre-commit-config.yaml  AGENTS.md  CHANGES.md  MANIFEST.in  README.md  lefthook.yml  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml  release.yaml
.github/workflows/: autofix.yml  automerge.yml  codeql-analysis.yml  python-publish.yml  run-linter.yml  run-tests.yml
openneuro/: __init__.py  __main__.py  _download.py  config.py  default_excludes.json  download.py  openneuro.py
openneuro/tests/: test_config.py  test_download.py
src/openneuro/: __init__.py  __main__.py  _cli.py  _config.py  _download.py  _glob.py  _logging.py  _models.py  config.py  openneuro.py
src/openneuro/tests/: conftest.py  test_config.py  test_download.py  utils.py
src/openneuro/tests/data/: expected_file_count_test_cases.json  expected_files_test_cases.json  mock_metadata_ds000117.json  traverse_dir_test_cases.json
tests/: __init__.py  conftest.py  test_config.py  test_download.py  test_models.py
tests/data/: expected_file_count_test_cases.json  expected_files_test_cases.json  mock_metadata_ds000117.json
