[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "openneuro-py"
description = "A Python client for OpenNeuro."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["science", "neuroscience"]
authors = [
  { name = "Richard Höchenberger", email = "richard.hoechenberger@gmail.com" },
]
classifiers = [
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
]
dependencies = [
  "httpx >= 0.15",
  "requests",
  "tqdm",
  "typer-slim[standard]>=0.16",
  "aiofiles",
  "sgqlc",
  "platformdirs",
]
dynamic = ["version"]

[project.scripts]
openneuro-py = "openneuro._cli:app"

[project.urls]
homepage = "https://github.com/hoechenberger/openneuro-py"

[tool.hatch.version]
source = "vcs"
raw-options = { version_scheme = "release-branch-semver" }

[tool.hatch.build.targets.wheel]
packages = ["src/openneuro"]

[tool.pytest.ini_options]
addopts = "-ra -vv --tb=short --durations=10"

[tool.ruff.lint]
select = ["E", "F", "W", "D", "I"]
ignore = [
  "D203", # one-blank-line-before-class
  "D213", # multi-line-summary-second-line
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
]
