[project]
name = "openneuro-py"
description = "A Python client for OpenNeuro."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Richard Höchenberger", email = "richard.hoechenberger@gmail.com" },
]
keywords = ["neuroscience", "science"]
classifiers = [
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
]
dependencies = [
  "aiofiles",
  "httpx >= 0.15",
  "platformdirs",
  "requests",
  "sgqlc",
  "tqdm",
  "typer>=0.24.0",
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/openneuro-py/openneuro-py"

[project.scripts]
openneuro-py = "openneuro._cli:app"

[dependency-groups]
dev = [
  "lefthook>=1.10.4",
  "pytest>=9.0.0",
  "pytest-rerunfailures",
  "ruff>=0.14.13",
  "tombi>=0.7.19",
  "ty>=0.0.12",
  "types-aiofiles>=25.1.0.20251011",
  "types-requests>=2.32.4.20260107",
  "types-tqdm",
]

[build-system]
requires = ["hatch-vcs", "hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
raw-options = { version_scheme = "release-branch-semver" }

[tool.hatch.build.targets.wheel]
packages = ["src/openneuro"]

[tool.pytest]
addopts = ["--durations=10", "--tb=short", "-ra", "-vv"]

[tool.ruff.lint]
select = ["E", "F", "W", "D", "I", "UP"]
ignore = [
  "D203",  # one-blank-line-before-class
  "D213",  # multi-line-summary-second-line
]

[tool.ty.src]
include = ["src"]
