[metadata]
name = openneuro-py
version = 2020.4
author = Richard Höchenberger <richard.hoechenberger@gmail.com>
author_email = richard.hoechenberger@gmail.com
url = https://github.com/hoechenberger/openneuro-py
project_urls =
    Source Code = https://github.com/hoechenberger/openneuro-py
    Bug Tracker = https://github.com/hoechenberger/openneuro-py/issues
license = GPL-3.0-only
license_file = LICENSE
description = A Python client for OpenNeuro.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
python_requires = >=3.6
install_requires =
    httpx >=0.15
    tqdm
    click
    importlib-metadata ~= 1.0; python_version < "3.8"

[options.entry_points]
console_scripts =
    openneuro-py = openneuro.openneuro:cli

[bdist_wheel]
universal = 1

