[metadata]
name = openneuro-py
version = 2021.9
author = Richard Höchenberger <richard.hoechenberger@gmail.com>
author_email = richard.hoechenberger@gmail.com
url = https://github.com/hoechenberger/openneuro-py
project_urls =
    Source Code = https://github.com/hoechenberger/openneuro-py
    Bug Tracker = https://github.com/hoechenberger/openneuro-py/issues
license = GPL-3.0-only
license_file = LICENSE
description = A Python client for OpenNeuro.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.7
install_requires =
    httpx >=0.15
    requests
    tqdm
    click
    aiofiles
    sgqlc
    importlib-metadata; python_version < "3.8"
    typing-extensions; python_version < "3.8"
include_package_data = True

[options.entry_points]
console_scripts =
    openneuro-py = openneuro.openneuro:cli

[tool:pytest]
addopts = -s
